--- a/RotaApp1/res/layout/activity_add_favorite_screen.xml
+++ b/RotaApp1/res/layout/activity_add_favorite_screen.xml
@@ -1,16 +1,74 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".AddFavoriteScreen" >
-
-    <TextView
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
+    
+<TextView
+        android:id="@+id/tvInitialText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:text="@string/favorite_label_place"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+    
+    <EditText
+        android:layout_marginTop="5dp"
+        android:id="@+id/etFavoriteDescription"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="@string/favorite_hint_place_name"
+        android:inputType="textCapSentences" >
 
-</RelativeLayout>
+        <requestFocus />
+    </EditText>
+    
+   <TextView
+        android:id="@+id/tvPlaceLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/place_lat_long"
+        android:layout_marginTop="10dp"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+    
+    <TextView
+        android:id="@+id/tvLatitude"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/latitude"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    <EditText
+        android:id="@+id/etFavoriteLatitude"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+		android:enabled="false"
+        android:inputType="phone" >
+
+    </EditText>
+    <TextView
+        android:id="@+id/tvLongitude"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/longitude"
+    	android:layout_marginTop="5dp"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+    
+        <EditText
+        android:id="@+id/etFavoriteLongitude"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+		android:enabled="false"
+        android:ems="10"
+        android:inputType="phone" >
+
+    </EditText>
+
+    <Button 
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/btAddFavorite"
+            android:text="@string/favorite_add_location"
+            android:layout_marginTop="20dp"
+            />
+</LinearLayout>
