--- a/RotaApp1/res/layout/activity_visualize_favorite_screen.xml
+++ b/RotaApp1/res/layout/activity_visualize_favorite_screen.xml
@@ -8,9 +8,13 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".VisualizeFavoriteScreen" >
 
-    <TextView
-        android:layout_width="wrap_content"
+    <ListView
+        android:id="@+id/lvFavoritesList"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" >
+
+    </ListView>
 
 </RelativeLayout>
