--- a/RotaApp1/res/layout/favorite_item.xml
+++ b/RotaApp1/res/layout/favorite_item.xml
@@ -11,14 +11,16 @@
         android:layout_alignParentTop="true"
         android:layout_marginLeft="18dp"
         android:layout_marginTop="14dp"
+        android:contentDescription="@string/favorite_bt_manager"
         android:src="@drawable/favorite_ico" />
 
     <TextView
         android:id="@+id/tvLtItem"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="225dp"
+        android:layout_height="50dp"
         android:layout_alignBottom="@+id/imgLtItem"
-        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="15dp"
+        android:layout_toRightOf="@+id/imgLtItem"
         android:text=""
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
